--- a/Boys Page/scss/_global.scss
+++ b/Boys Page/scss/_global.scss
@@ -1,7 +1,13 @@
+@import '../../../../node_modules/bootstrap/scss/functions';
+
+@import '../../../../node_modules/bootstrap/scss/variables';
+
+
 %header{
 	text-align:center;
+	margin-top:20px;
+	margin-bottom:20px;
 }
-
 .boys_section{ 
     .title{
        @extend %header;
@@ -11,29 +17,50 @@
 	  }
 	padding:0px 5px;
 	overflow-x:hidden;
-	    .btn{
-		     background-color: #fff;
-		     border: 2px solid #000;
+	    .btn-default{
+		     background-color: $white;
+		     border: 2px solid $black;
 		     border-radius: 18px;
-		     padding: 12px 18px;
-		     font-size:10px;
+		     padding: 1rem 4rem;
+		     font-size:14px;
 		     position: relative;
-	         bottom: 18px;
+	         bottom: 32px;
 	            &:hover{
 	               background-color:#828282;
-	               color:#fff;
+	               border: 2px solid #000;
+	               color:$white;
 	            }
-
 			   a{
 	            text-decoration:none;
 	            text-transform:uppercase;
-	            color:#000;
+	            color:$black;
 	                &:hover{
-	                    color:#fff;
+	                    color:$white;
 	                }
-			}
+		     	}
+	       }
+
+	    .button{
+	    	.btn-view{
+			    padding: 15px;
+			    background: #fff;
+			    border: 2px solid #cacaca;
+		        color: #000;
+		        margin: -10px;
+                width: 100%;
+		       	a{
+                  color:#000;
+                  text-decoration:none;
+		       	}
+		        @media (max-width:768px){
+			         margin: 1rem 0px;
+				}
+	        }
+
+		    }
 	    }
-}
+
+
 
 .shop{
     padding-bottom:10px;
@@ -41,26 +68,35 @@
 	    .title{
 	       @extend %header;
 	    }
-    .shop_by_price{
-	     display:grid;
-	     padding:2rem;
-		    .btn-primary{ 
-		          padding:25px;
-		          margin-top:30px;
-		          background-image: linear-gradient(to right, #316bab, #8bdfec);
-		          border:none; 
-		    }
-        }
-
+	    .shop_by_price{
+	        display:grid;
+		       .btn{
+		            border: 1px solid #cacaca;
+					display: block;
+					width: 100%;
+				    background: #fff;
+					color: #000;
+					margin-bottom: 3rem;
+					padding: 1.2rem;
+						&:hover{
+						   border: 1px solid #cacaca;
+						   background: #fff;
+					       color: #000;
+						}
+			    }
+		}
+  .shop_by_age{
+      display: flex;
+       justify-content: left;
 	.item1{
-	    float:left;
+	    width:48%;
 	   	box-shadow: 2px 3px 13px -2px #cacaca;
 		    &:hover{
 		      	  box-shadow: 4px 6px 10px 0px rgb(185, 185, 185);
 		    }
 		    &:after{
 		      content:"";
-		      float:none;
+		      display:table;
 		      clear:both;
 		    }
 	    .head-text{
@@ -71,21 +107,19 @@
 		    text-transform:uppercase;
 		    text-weight:700;
         }
-        @media (max-width:768px){
-                margin: 2rem 5rem;
-           }
+
 	}
 
 	.item2{
-		float:left;
-		margin-left: 1rem;
+	    width:48%;
       	box-shadow: 2px 3px 13px -2px #cacaca;
+      	margin-left: 2rem;
 	        &:hover{
 		      	   box-shadow: 4px 6px 10px 0px rgb(185, 185, 185);
 		    }
 			&:after{
 		      content:"";
-		      float:none;
+		      display:table;
 		      clear:both;
 	        }
 	    .head-text{
@@ -96,9 +130,6 @@
 		    text-transform:uppercase;
 		    text-weight:700;
            }
-            @media (max-width:768px){
-                margin: 2rem 5rem;
-           }
         }
 
        .text-muted{
@@ -108,9 +139,188 @@
 		       color:#000;
 		       font-weight:700;
 	               &:hover{
-	                 color:#black;
+	                 color:$black;
 	            }
 		    }
 	    }
+	}
   }
+
+.offers{
+	.title{
+	    @extend %header;
+	}
+}
+.feaured_products{
+	.title{
+	    @extend %header;
+	}
+	 .figure-caption{
+		border-radius: 4px;
+	    position: relative;
+	    bottom: 25px;
+	    background-color: $red;
+	    width: 50px;
+	    color: #fff;
+	    left: 37%;
+	 }
+}
+.brands{
+	.title{
+	    @extend %header;
+	}
+	.figure{
+	  margin-left:2rem;
+ 		@media (max-width:768px){
+	        margin: 0px 8rem !important;
+        }
+	   .figure-caption{
+		    border: 1px solid #dcdcdc;
+		    padding: 0.6rem 0.8rem;
+		    min-width: 130px;
+		    font-size: 0.75rem;
+		    border-radius: 36px;
+		    position: relative;
+		    bottom: 18px;
+		    width: 1%;
+		    left: 20px;
+		    background-color:#717171;
+		    	a{
+		    		text-decoration:none;
+		    		color:$white;
+		    		font-size:12px;
+		    	}
+        }
+	}
+}
+.shop_by_clothing{
+	.title{
+	    @extend %header;
+	}
+	    .btn-default{
+		     background-color: transparent;
+		     border: 1px solid #f8f9fa;
+		     padding: 0.5rem;
+		     font-size: 14px;
+		     position: relative;
+		     bottom: 67px;
+		     width: 57%;
+			 left: 20%;
+	            &:hover{
+	               background-color: transparent;
+	               border: 1px solid $white;
+	               color:$white;
+	            }
+			   a{
+	            text-decoration:none;
+	            text-transform:uppercase;
+	            color:$white;
+	                &:hover{
+	                   border:none;
+	                   color:$white;
+	                }
+		     	}
+		@media (max-width:768px){
+           position: relative;
+           left: 23%;
+		}
+	}
+}
+
+.new_arrivals{
+  overflow-x:hidden;
+	.arrivals-title{
+		font-size: 75px;
+		color: #bb9a37;
+		font-family: serif;
+		text-align: center;
+    	margin: 1rem 0;
+    	font-weight: 600;
+    }
+	.arrivals-text{
+	    font-size: 16px;
+	    line-height: 1.3;
+	    font-weight: 600;
+	    letter-spacing: 0.14em;
+	    margin: 0 1.3em;
+	    text-align:center;
+    }
+    .btn-arrivals{
+    	border: 1px solid #474747;
+    	margin-top:2em;
+    	display:block;
+    	text-align:center;
+	    width: 50%;
+	    margin: 2rem 9rem;
+	    border-radius: 0px;
+	    &:hover{
+	        background-color:#474747;
+	    	color:$white !important;
+	    }
+        >a{
+    	    text-transform: uppercase;
+		    font-weight: 600;
+		    color: #474747;
+		    font-size: 16px;
+		    letter-spacing: 1px;
+	    	&:hover{
+	    		color:$white;
+	    	}
+    	}
+    }
+
+}
+
+.category_boys{
+ 	 overflow:hidden;
+		.title{
+		    @extend %header;
+		}
+		.category-item{
+			float: left;
+		    width: 25%;
+		    text-decoration:none;
+		    color: #989898;
+		    position:relative;              
+		    	.figure-caption{
+	    			position: absolute;
+				    left: 0;
+				    right: 0;
+				    bottom: 0;
+		        
+				    	.subtitle{
+		   			  		text-transform: uppercase;
+						    font-size: 1.3em;
+						    font-weight: 500;
+						    letter-spacing: 0.1em;
+						    margin-bottom: -12px;
+						      @media(max-width:768px){
+						      	font-size:1.5em;
+						      }
+		   			  	}
+
+		   			  	.larger-title{
+		   			  		color: #989898;
+		   			  		font-size:40px;
+						    font-weight: 600;
+						    text-transform: uppercase;
+						    font-family: serif;
+						    	@media(max-width:768px){
+						           font-size:20px;
+						      }
+					    }
+					    &:hover{
+			     			color:#d39e00;
+			     			  .larger-title{
+			     			     color: #d39e00;
+			     			  }
+			 			 }
+			        }	
+		&after{
+		  content:"";
+		  display:block;
+		  clear:both;
+		}	
+	}
+}
 
