--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5585,7 +5585,7 @@ a.text-dark:hover, a.text-dark:focus {
 .invisible {
   visibility: hidden !important; }
 
-.shop .title, .offers .title, .feaured_products .title, .brands .title, .shop_by_clothing .title {
+.shop_by_price .title, .shop_by_age .title, .shop .title, .offers .title, .feaured_products .title, .brands .title, .shop_by_clothing .title {
   text-align: center;
   margin-top: 4rem;
   margin-bottom: 4rem;
@@ -5625,29 +5625,82 @@ a.text-dark:hover, a.text-dark:focus {
     left: 0;
     right: 0;
     bottom: 0; }
+  @media (max-width: 768px) {
+    .shop_by_category .category-item {
+      width: 50%; } }
 
 .shop_by_category:after {
   content: "";
   display: block;
   clear: both; }
 
+.shop_by_price {
+  padding-bottom: 10px;
+  overflow-x: hidden; }
+  .shop_by_price .kss-price {
+    display: block;
+    text-align: center; }
+    .shop_by_price .kss-price .label-box__textarea {
+      display: inline;
+      width: 70%;
+      border: 1px solid #cacaca;
+      margin: 0 auto 0.5em; }
+
+.shop_by_age {
+  padding-bottom: 10px;
+  overflow-x: hidden; }
+  .shop_by_age .kss-age {
+    display: flex;
+    justify-content: left; }
+    .shop_by_age .kss-age .card-img {
+      width: 80%;
+      box-shadow: 2px 3px 13px -2px #cacaca;
+      cursor: pointer;
+      margin: 5px;
+      position: relative; }
+      .shop_by_age .kss-age .card-img:hover {
+        box-shadow: 4px 6px 10px 0px #b9b9b9;
+        text-decoration: none; }
+      .shop_by_age .kss-age .card-img:after {
+        content: "";
+        display: table;
+        clear: both; }
+      @media (max-width: 768px) {
+        .shop_by_age .kss-age .card-img {
+          margin: 0; } }
+      .shop_by_age .kss-age .card-img:before {
+        content: '';
+        display: inline-block;
+        width: 28%;
+        height: 31%;
+        border-radius: 50%;
+        background-color: #f8f8f8;
+        position: absolute;
+        left: -6px;
+        top: -64px;
+        z-index: 0;
+        box-shadow: 1px 1px 1px 1px #bfbfbf; }
+      .shop_by_age .kss-age .card-img .card-text {
+        color: #000;
+        position: absolute;
+        top: -55px;
+        left: 5px;
+        font-size: 2.2vw;
+        font-weight: 600;
+        color: #ff0000;
+        text-align: center; }
+
 .shop {
   padding-bottom: 10px;
   overflow-x: hidden; }
   .shop .kss-price {
-    display: block; }
-    .shop .kss-price .btn {
-      border: 1px solid #cacaca;
+    display: block;
+    text-align: center; }
+    .shop .kss-price .label-box__textarea {
       display: block;
-      width: 100%;
-      background: #fff;
-      color: #000;
-      margin-bottom: 2rem;
-      padding: 1rem; }
-      .shop .kss-price .btn:hover {
-        border: 1px solid #cacaca;
-        background: #fff;
-        color: #000; }
+      width: 70%;
+      border: 1px solid #cacaca;
+      margin: 0 auto 0.5em; }
   .shop .kss-age {
     display: flex;
     justify-content: left; }
@@ -5670,16 +5723,24 @@ a.text-dark:hover, a.text-dark:focus {
       .shop .kss-age .card-img:before {
         content: '';
         display: inline-block;
-        width: 33%;
-        height: 33%;
+        width: 28%;
+        height: 31%;
         border-radius: 50%;
         background-color: #f8f8f8;
         position: absolute;
         left: -6px;
-        top: -57px; }
+        top: -64px;
+        z-index: 0;
+        box-shadow: 1px 1px 1px 1px #bfbfbf; }
       .shop .kss-age .card-img .card-text {
         color: #000;
-        position: aboslute; }
+        position: absolute;
+        top: -55px;
+        left: 5px;
+        font-size: 2.2vw;
+        font-weight: 600;
+        color: #ff0000;
+        text-align: center; }
 
 .feaured_products .figure .figure-caption {
   border-radius: 4px;
@@ -5688,29 +5749,29 @@ a.text-dark:hover, a.text-dark:focus {
   background-color: #dc3545;
   width: 50px;
   color: #fff;
-  left: 37%; }
+  left: 37%;
+  font-size: 1rem; }
 
 .feaured_products:after {
   content: "";
   display: block;
   clear: both; }
 
-.brands .figure {
-  margin-left: 2rem;
-  text-decoration: none;
-  position: relative; }
-  .brands .figure .figure-caption {
-    border: 1px solid #dcdcdc;
-    padding: 0.6rem 0.8rem;
-    font-size: 0.75rem;
-    border-radius: 36px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #717171;
-    color: #fff;
-    font-size: 12px; }
+.brands .white-hover {
+  background-color: #f6f6f6;
+  height: 100%;
+  margin: 0 10px; }
+  .brands .white-hover .figure {
+    text-align: center;
+    margin: auto;
+    padding: 20px; }
+    .brands .white-hover .figure .loaded {
+      filter: grayscale(100%);
+      opacity: 0.7;
+      width: 80%; }
+      .brands .white-hover .figure .loaded:hover {
+        filter: none;
+        opacity: 1; }
 
 .shop_by_clothing {
   margin: 4rem 0rem; }
@@ -5742,19 +5803,11 @@ a.text-dark:hover, a.text-dark:focus {
       width: 100%;
       height: 100%; }
   .shop_by_clothing .cd-discover {
-    text-align: center; }
-    .shop_by_clothing .cd-discover .btn-default {
-      border: 1px solid #cacaca;
-      background: #fff;
-      color: #000;
-      padding: 0.5rem 4rem; }
-      .shop_by_clothing .cd-discover .btn-default a {
-        text-decoration: none;
-        color: #000; }
-      .shop_by_clothing .cd-discover .btn-default:hover {
-        border: 1px solid #cacaca;
-        background: #fff;
-        color: #000; }
+    margin: auto;
+    width: 20%; }
+    .shop_by_clothing .cd-discover a {
+      text-decoration: none;
+      color: #000; }
 
 .new_arrivals {
   overflow: hidden;
@@ -5764,29 +5817,26 @@ a.text-dark:hover, a.text-dark:focus {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 20%;
-    margin-bottom: -30px;
+    bottom: 25%;
     text-align: center; }
     .new_arrivals .label-box__textarea .label-box__title {
-      font-size: 6vw;
-      color: #bb9a37;
+      font-size: 5vw;
+      color: #000;
       font-weight: 600;
       text-transform: uppercase;
-      text-shadow: 1px 6px 5px; }
+      text-shadow: 1px 2px 4px; }
     .new_arrivals .label-box__textarea .label-box__subtitle {
       font-size: 16px;
       line-height: 1.3;
       font-weight: 600;
-      letter-spacing: 0.14em;
-      margin: 0 1.3em; }
+      letter-spacing: 0.04em;
+      margin: 1.1em 4.3em; }
     .new_arrivals .label-box__textarea .cd-discover {
-      border: 1px solid #474747;
       display: block;
-      margin: 2rem 9rem;
-      border-radius: 0px; }
-      .new_arrivals .label-box__textarea .cd-discover:hover {
-        background-color: #474747;
-        color: #fff !important; }
+      margin: auto;
+      border-radius: 0px;
+      width: 50%; }
     @media (max-width: 768px) {
       .new_arrivals .label-box__textarea {
-        display: contents; } }
+        position: initial;
+        margin: 2px; } }
