--- a/landing-boys.component.html
+++ b/landing-boys.component.html
@@ -1,34 +1,40 @@
-<app-header></app-header>
-<ng-container>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Landing-boys</title>
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+</head>
+<body>
 
 <!-- Shop by category -->
 <div class="shop_by_category">
-	<a class="category-item" href="#">
-		<img src="../../../assets/img/landing-page-boys/category-item1.jpg" class="img-fluid" alt="category_clothing" title="clothing">
+	<a class="category-item position-relative" href="#">
+		<img src="images/category-item1.jpg" class="img-fluid" alt="category_clothing" title="clothing">
 			<div class="label-box__textarea text-center">
 			  	<p class="label-box__subtitle"> shop </p>
 			  	<p class="cat__name"> Clothing </p>
 			</div>
 	</a> 	
 
-	<a class="category-item" href="#">
-		<img src="../../../assets/img/landing-page-boys/category-item2.jpg" class="img-fluid" alt="category-accessories" title="Accessories">
+	<a class="category-item position-relative" href="#">
+		<img src="images/category-item2.jpg" class="img-fluid" alt="category-accessories" title="Accessories">
 			<div class="label-box__textarea text-center"> 
 				<p class="label-box__subtitle"> shop </p>
 				<p class="cat__name"> Accessories </p>
 			</div>
 	</a> 	
 
-	<a class="category-item" href="#">
-		<img src="../../../assets/img/landing-page-boys/category-item4.jpg" class="img-fluid" alt="category-shoes" title="Shoes">
+	<a class="category-item position-relative" href="#">
+		<img src="images/category-item4.jpg" class="img-fluid" alt="category-shoes" title="Shoes">
 			<div class="label-box__textarea text-center">
 				<p class="label-box__subtitle"> shop </p>
 				<p class="cat__name"> Shoes </p>
 			</div>
 	</a> 	
 
-	<a class="category-item" href="#">
-		<img src="../../../assets/img/landing-page-boys/category-item3.jpg" class="img-fluid" alt="category-all" title="View All Products">
+	<a class="category-item position-relative" href="#">
+		<img src="images/category-item3.jpg" class="img-fluid" alt="category-all" title="View All Products">
 			<div class="label-box__textarea text-center">
 				<p class="label-box__subtitle"> View </p>
 				<p class="cat__name"> All </p>
@@ -39,31 +45,29 @@
 
 <!-- Shop by price -->
 <div class="shop_by_price">
-    <div class="container">
-    	<h2 class="section-title"> Price Store</h2>
-		    <div class="row kss-price"> 
-		   		<ul>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Below Rs. 399" class="tab" alt="Below Rs. 299">Below Rs. 299</a>
-			   		</li>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Rs. 300 to Rs. 699" class="tab" alt="Below Rs. 399">Rs. 300 to Rs. 699</a>
-			   		</li>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Rs. 700 to Rs. 999" class="tab" alt="Rs. 700 to Rs. 999">Rs. 700 to Rs. 999</a>
-			   		</li>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Rs. 1000 to Rs. 1999" class="tab" alt="Rs. 1000 to Rs. 1999">Rs. 1000 to Rs. 1999</a>
-			   		</li>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Rs. 2000 to Rs. 2999" class="tab" alt="Rs. 2000 to Rs. 2999">Rs. 2000 to Rs. 2999</a>
-			   		</li>
-			   		<li class="col-xs-4">
-			   			<a href="#" title="Above Rs. 3000" class="tab" alt="Above Rs. 3000">Above Rs. 3000</a>
-			   		</li>
-            	</ul>
-	        </div> 
-	</div>
+	<h2 class="section-title"> Price Store</h2>
+	    <div class="row kss-price"> 
+	   		<ul>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Below Rs. 399" class="tab" alt="Below Rs. 299">Below Rs. 299</a>
+		   		</li>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Rs. 300 to Rs. 699" class="tab" alt="Below Rs. 399">Rs. 300 to Rs. 699</a>
+		   		</li>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Rs. 700 to Rs. 999" class="tab" alt="Rs. 700 to Rs. 999">Rs. 700 to Rs. 999</a>
+		   		</li>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Rs. 1000 to Rs. 1999" class="tab" alt="Rs. 1000 to Rs. 1999">Rs. 1000 to Rs. 1999</a>
+		   		</li>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Rs. 2000 to Rs. 2999" class="tab" alt="Rs. 2000 to Rs. 2999">Rs. 2000 to Rs. 2999</a>
+		   		</li>
+		   		<li class="col-xs-4">
+		   			<a href="#" title="Above Rs. 3000" class="tab" alt="Above Rs. 3000">Above Rs. 3000</a>
+		   		</li>
+        	</ul>
+        </div> 
 </div>
 
 
@@ -76,7 +80,7 @@
 	    	<div class="row">  
 				<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-						<img src="../../../assets/img/landing-page-boys/age1.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
+						<img src="images/age1.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
 						<div class="white-card d-inline-block">			
     						<div class="label-box__textarea">
     							<p class="label-box__title text-center">2 -7 <br> Years</p>
@@ -88,7 +92,7 @@
 
      	    	<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-   						<img src="../../../assets/img/landing-page-boys/age2.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
+   						<img src="images/age2.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
     					<div class="white-card d-inline-block">
     						<div class="label-box__textarea">
 	    						<p class="label-box__title text-center">7 - 14 <br> Years</p>
@@ -109,12 +113,12 @@
  		    <div class="row">
 		 		<div class="col-lg-6 col-md-6 col-sm-12 mb-2">
 		 			<a href="#">
-		 			<img src="../../../assets/img/landing-page-boys/offer_1.jpg" class="img-fluid" alt="offers" title="super sale">
+		 			<img src="images/offer_1.jpg" class="img-fluid" alt="offers" title="super sale">
 		 			</a>
 		 		</div>
 		 		<div class="col-lg-6 col-md-6 col-sm-12 mb-2">
 		 			<a href="#">
-		 		    <img src="../../../assets/img/landing-page-boys/offer_2.jpg" class="img-fluid" alt="offers" title="summer sale">
+		 		    <img src="images/offer_2.jpg" class="img-fluid" alt="offers" title="summer sale">
 		 		    </a>
 		 		</div>
  		    </div>
@@ -129,7 +133,7 @@
 				<div class="col-lg-3 col-md-6 col-6">
 				    <a href="#" class="img-holder">
 						<figure class="figure product-card">
-						    <img src="../../../assets/img/landing-page-boys/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
+						    <img src="images/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
 						    <figcaption class="figure-caption text-center kss-price">₹250</figcaption>
 						</figure>
 				    </a>
@@ -137,7 +141,7 @@
 			    <div class="col-lg-3 col-md-6 col-6">
 				    <a href="#" class="img-holder">
 						<figure class="figure product-card">
-							<img src="../../../assets/img/landing-page-boys/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
+							<img src="images/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
 							<figcaption class="figure-caption text-center kss-price">₹399</figcaption>
 						</figure>
 					</a>
@@ -145,7 +149,7 @@
 				<div class="col-lg-3 col-md-6 col-6">
 					<a href="#" class="img-holder">
 						<figure class="figure product-card">
-						    <img src="../../../assets/img/landing-page-boys/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
+						    <img src="images/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
 							<figcaption class="figure-caption text-center kss-price">₹379</figcaption>
 						</figure>
 					</a>
@@ -153,7 +157,7 @@
 				<div class="col-lg-3 col-md-6 col-6">
 					<a href="#" class="img-holder">
 						<figure class="figure product-card">
-							<img src="../../../assets/img/landing-page-boys/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
+							<img src="images/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
 							<figcaption class="figure-caption text-center kss-price">₹379</figcaption>
 						</figure>
 					</a>
@@ -169,27 +173,27 @@
 			<div class="d-flex flex-lg-nowrap flex-md-wrap flex-wrap">
 			  	<a href="#" class="white-hover mb-2">
 				    <figure class="figure mr-2">
-						<img src="../../../assets/img/landing-page-boys/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
+						<img src="images/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
 				    </figure>
 			    </a>
 			    <a href="#" class="white-hover mb-2">
 				    <figure class="figure mr-2">
-					    <img src="../../../assets/img/landing-page-boys/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
+					    <img src="images/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
 				    </figure>
 				</a>
 			    <a href="#" class="white-hover mb-2">
 				    <figure class="figure mr-2">
-					    <img src="../../../assets/img/landing-page-boys/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
+					    <img src="images/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
 				    </figure>
 				</a>
 				<a href="#" class="white-hover mb-2">
 				    <figure class="figure mr-2">
-					  	<img src="../../../assets/img/landing-page-boys/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
+					  	<img src="images/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
 				    </figure>		   
 				</a>
 			    <a href="#" class="white-hover mb-2">
 				    <figure class="figure mr-2">
-					  	<img src="../../../assets/img/landing-page-boys/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
+					  	<img src="images/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
 				    </figure>
 				</a>
 			</div>
@@ -199,53 +203,53 @@
 <!-- Shop by Clothing -->
 <div class="shop_by_clothing">
     <div class="container">
-	    <div class=" d-sm-flex align-items-sm-center justify-content-sm-center row">
-	     	<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-	     		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-			  		<img src="../../../assets/img/landing-page-boys/clothing_item1.jpeg" class="d-lg-block mx-auto img-fluid mb-lg-2">
+	    <div class="row">
+	     	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	     		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+			  		<img src="images/clothing_item1.jpeg" class="img-fluid">
 			  		<button class="btn btn-default">T-Shirts</button> 
 		  	    </a>
 	  		</div>
-	  		<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-	  			<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item2.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+	  		<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	  			<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item2.jpeg" class="img-fluid">
 					<button class="btn btn-default">Boy Shirt</button> 
 			    </a>
 			</div>
-		    <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-		    	<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+		    <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item3.jpeg" class="img-fluid">
 					<button class="btn btn-default">Bottoms</button> 
 				</a>
 		    </div>
-		 	<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-		 		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item4.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item4.jpeg" class="img-fluid">
 					<button class="btn btn-default">Shoes</button> 
 				</a>
 			</div>
 
-	        <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-	        	<a class="category-item d-lg-block d-sm-inline-block" href="#">
-			  		<img src="../../../assets/img/landing-page-boys/clothing_item5.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+	        <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	        	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+			  		<img src="images/clothing_item5.jpeg" class="img-fluid">
 			  		<button class="btn btn-default">Formal Pants</button> 
 			  	</a>
 	  	    </div>
-	  	    <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-	  	    	<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item6.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+	  	    <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	  	    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item6.jpeg" class="img-fluid">
 					<button class="btn btn-default">Jeans</button>
 				</a> 
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-		 		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item3.jpeg" class="img-fluid">
 					<button class="btn btn-default">Bottoms</button> 
 				</a>
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-2">
-		 		<a class="category-item d-lg-block d-sm-inline-block" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item8.jpeg" class="d-block mx-auto img-fluid mb-lg-2">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+					<img src="images/clothing_item8.jpeg" class="img-fluid">
 					<button class="btn btn-default">Jackets & Coats</button>
 				</a>
 			</div>
@@ -257,7 +261,7 @@
 </div>
 
 <!-- New Arrivals -->
-<div class="new_arrivals">
+<div class="new_arrivals position-relative">
  	<div class="row">
 	 	<div class="col-lg-6 col-md-6 col-sm-12">
 	 		<div class="label-box__textarea">
@@ -272,15 +276,12 @@
 	 	</div>
 	 	<div class="col-lg-6 col-md-6 col-sm-12 ">
 	 		<a href="#">
-	 			<img src="../../../assets/img/landing-page-boys/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
+	 			<img src="images/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
 	 		</a>
 	 	</div>
  	</div>
 </div>
 
-</ng-container>
 
-<!-- Back to top -->
-<div app-back-to-top></div>
-
-<app-footer> </app-footer>
+</body>
+</html>
