--- a/modified pages/landing-boys.component.html
+++ b/modified pages/landing-boys.component.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Landing-boys</title>
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-</head>
-<body>
+<app-header></app-header>
+<ng-container>
+
 
 <!-- Shop by category -->
 <div class="shop_by_category">
 	<a class="category-item position-relative" href="#">
-		<img src="images/category-item1.jpg" class="img-fluid" alt="category_clothing" title="clothing">
+		<img src="../../../assets/img/landing-page-boys/category-item1.jpg" class="img-fluid" alt="category_clothing" title="clothing">
 			<div class="label-box__textarea text-center">
 			  	<p class="label-box__subtitle"> shop </p>
 			  	<p class="cat__name"> Clothing </p>
@@ -18,7 +13,7 @@
 	</a> 	
 
 	<a class="category-item position-relative" href="#">
-		<img src="images/category-item2.jpg" class="img-fluid" alt="category-accessories" title="Accessories">
+		<img src="../../../assets/img/landing-page-boys/category-item2.jpg" class="img-fluid" alt="category-accessories" title="Accessories">
 			<div class="label-box__textarea text-center"> 
 				<p class="label-box__subtitle"> shop </p>
 				<p class="cat__name"> Accessories </p>
@@ -26,7 +21,7 @@
 	</a> 	
 
 	<a class="category-item position-relative" href="#">
-		<img src="images/category-item4.jpg" class="img-fluid" alt="category-shoes" title="Shoes">
+		<img src="../../../assets/img/landing-page-boys/category-item4.jpg" class="img-fluid" alt="category-shoes" title="Shoes">
 			<div class="label-box__textarea text-center">
 				<p class="label-box__subtitle"> shop </p>
 				<p class="cat__name"> Shoes </p>
@@ -34,7 +29,7 @@
 	</a> 	
 
 	<a class="category-item position-relative" href="#">
-		<img src="images/category-item3.jpg" class="img-fluid" alt="category-all" title="View All Products">
+		<img src="../../../assets/img/landing-page-boys/category-item3.jpg" class="img-fluid" alt="category-all" title="View All Products">
 			<div class="label-box__textarea text-center">
 				<p class="label-box__subtitle"> View </p>
 				<p class="cat__name"> All </p>
@@ -46,7 +41,7 @@
 <!-- Shop by price -->
 <div class="shop_by_price">
 	<h2 class="section-title"> Price Store</h2>
-	    <div class="row kss-price"> 
+	    <div class="kss-price"> 
 	   		<ul>
 		   		<li class="col-xs-4">
 		   			<a href="#" title="Below Rs. 399" class="tab" alt="Below Rs. 299">Below Rs. 299</a>
@@ -80,19 +75,19 @@
 	    	<div class="row">  
 				<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-						<img src="images/age1.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
+						<img src="../../../assets/img/landing-page-boys/age1.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
 						<div class="white-card d-inline-block">			
     						<div class="label-box__textarea">
     							<p class="label-box__title text-center">2 -7 <br> Years</p>
     							<button class="btn kss-btn"> Shop Now</button>
-    						</div>
+    						</div> 
     					</div>
          			</a>
      	    	</div> 
 
      	    	<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-   						<img src="images/age2.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
+   						<img src="../../../assets/img/landing-page-boys/age2.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
     					<div class="white-card d-inline-block">
     						<div class="label-box__textarea">
 	    						<p class="label-box__title text-center">7 - 14 <br> Years</p>
@@ -113,12 +108,12 @@
  		    <div class="row">
 		 		<div class="col-lg-6 col-md-6 col-sm-12 mb-2">
 		 			<a href="#">
-		 			<img src="images/offer_1.jpg" class="img-fluid" alt="offers" title="super sale">
+		 			<img src="../../../assets/img/landing-page-boys/offer_1.jpg" class="img-fluid" alt="offers" title="super sale">
 		 			</a>
 		 		</div>
 		 		<div class="col-lg-6 col-md-6 col-sm-12 mb-2">
 		 			<a href="#">
-		 		    <img src="images/offer_2.jpg" class="img-fluid" alt="offers" title="summer sale">
+		 		    <img src="../../../assets/img/landing-page-boys/offer_2.jpg" class="img-fluid" alt="offers" title="summer sale">
 		 		    </a>
 		 		</div>
  		    </div>
@@ -131,33 +126,33 @@
 		<h2 class="section-title">Featured Products</h2>
 			<div class="overflow-m row">
 				<div class="col-lg-3 col-md-6 col-6">
-				    <a href="#" class="img-holder">
+				    <a href="#">
 						<figure class="figure product-card">
-						    <img src="images/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
+						    <img src="../../../assets/img/landing-page-boys/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
 						    <figcaption class="figure-caption text-center kss-price">₹250</figcaption>
 						</figure>
 				    </a>
 			    </div>
 			    <div class="col-lg-3 col-md-6 col-6">
-				    <a href="#" class="img-holder">
+				    <a href="#">
 						<figure class="figure product-card">
-							<img src="images/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
+							<img src="../../../assets/img/landing-page-boys/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
 							<figcaption class="figure-caption text-center kss-price">₹399</figcaption>
 						</figure>
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-6 col-6">
-					<a href="#" class="img-holder">
+					<a href="#">
 						<figure class="figure product-card">
-						    <img src="images/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
+						    <img src="../../../assets/img/landing-page-boys/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
 							<figcaption class="figure-caption text-center kss-price">₹379</figcaption>
 						</figure>
 					</a>
 				</div>
 				<div class="col-lg-3 col-md-6 col-6">
-					<a href="#" class="img-holder">
+					<a href="#">
 						<figure class="figure product-card">
-							<img src="images/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
+							<img src="../../../assets/img/landing-page-boys/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
 							<figcaption class="figure-caption text-center kss-price">₹379</figcaption>
 						</figure>
 					</a>
@@ -172,28 +167,28 @@
 		<h2 class="section-title">Brands</h2>
 			<div class="d-flex flex-lg-nowrap flex-md-wrap flex-wrap">
 			  	<a href="#" class="white-hover mb-2">
-				    <figure class="figure mr-2">
-						<img src="images/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
+				    <figure class="figure">
+						<img src="../../../assets/img/landing-page-boys/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
 				    </figure>
 			    </a>
 			    <a href="#" class="white-hover mb-2">
-				    <figure class="figure mr-2">
-					    <img src="images/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
+				    <figure class="figure">
+					    <img src="../../../assets/img/landing-page-boys/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
 				    </figure>
 				</a>
 			    <a href="#" class="white-hover mb-2">
-				    <figure class="figure mr-2">
-					    <img src="images/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
+				    <figure class="figure">
+					    <img src="../../../assets/img/landing-page-boys/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
 				    </figure>
 				</a>
 				<a href="#" class="white-hover mb-2">
-				    <figure class="figure mr-2">
-					  	<img src="images/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
+				    <figure class="figure">
+					  	<img src="../../../assets/img/landing-page-boys/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
 				    </figure>		   
 				</a>
 			    <a href="#" class="white-hover mb-2">
-				    <figure class="figure mr-2">
-					  	<img src="images/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
+				    <figure class="figure">
+					  	<img src="../../../assets/img/landing-page-boys/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
 				    </figure>
 				</a>
 			</div>
@@ -204,52 +199,52 @@
 <div class="shop_by_clothing">
     <div class="container">
 	    <div class="row">
-	     	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	     	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 	     		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-			  		<img src="images/clothing_item1.jpeg" class="img-fluid">
+			  		<img src="../../../assets/img/landing-page-boys/clothing_item1.jpeg" class="img-fluid">
 			  		<button class="btn btn-default">T-Shirts</button> 
 		  	    </a>
 	  		</div>
-	  		<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	  		<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 	  			<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item2.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item2.jpeg" class="img-fluid">
 					<button class="btn btn-default">Boy Shirt</button> 
 			    </a>
 			</div>
-		    <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 		    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item3.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
 					<button class="btn btn-default">Bottoms</button> 
 				</a>
 		    </div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item4.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item4.jpeg" class="img-fluid">
 					<button class="btn btn-default">Shoes</button> 
 				</a>
 			</div>
 
-	        <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	        <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 	        	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-			  		<img src="images/clothing_item5.jpeg" class="img-fluid">
+			  		<img src="../../../assets/img/landing-page-boys/clothing_item5.jpeg" class="img-fluid">
 			  		<button class="btn btn-default">Formal Pants</button> 
 			  	</a>
 	  	    </div>
-	  	    <div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+	  	    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 	  	    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item6.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item6.jpeg" class="img-fluid">
 					<button class="btn btn-default">Jeans</button>
 				</a> 
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item3.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
 					<button class="btn btn-default">Bottoms</button> 
 				</a>
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center mb-lg-2 d-flex">
+		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
 		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="images/clothing_item8.jpeg" class="img-fluid">
+					<img src="../../../assets/img/landing-page-boys/clothing_item8.jpeg" class="img-fluid">
 					<button class="btn btn-default">Jackets & Coats</button>
 				</a>
 			</div>
@@ -276,12 +271,15 @@
 	 	</div>
 	 	<div class="col-lg-6 col-md-6 col-sm-12 ">
 	 		<a href="#">
-	 			<img src="images/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
+	 			<img src="../../../assets/img/landing-page-boys/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
 	 		</a>
 	 	</div>
  	</div>
 </div>
 
+</ng-container>
 
-</body>
-</html>
+<!-- Back to top -->
+<div app-back-to-top></div>
+
+<app-footer> </app-footer>
