--- a/modified pages/landing-boys.component.scss
+++ b/modified pages/landing-boys.component.scss
@@ -153,7 +153,7 @@
 						width: 0;
 						margin: 0 auto;
 						height: 3px;
-						background: $d-red;
+						background: #e40046;
 						transition: width .3s;
 				    }
 				}
