--- a/modified pages/landing-boys.component.html
+++ b/modified pages/landing-boys.component.html
@@ -40,29 +40,31 @@
 
 <!-- Shop by price -->
 <div class="shop_by_price">
-	<h2 class="section-title"> Price Store</h2>
-	    <div class="kss-price"> 
-	   		<ul>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Below Rs. 399" class="tab" alt="Below Rs. 299">Below Rs. 299</a>
-		   		</li>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Rs. 300 to Rs. 699" class="tab" alt="Below Rs. 399">Rs. 300 to Rs. 699</a>
-		   		</li>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Rs. 700 to Rs. 999" class="tab" alt="Rs. 700 to Rs. 999">Rs. 700 to Rs. 999</a>
-		   		</li>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Rs. 1000 to Rs. 1999" class="tab" alt="Rs. 1000 to Rs. 1999">Rs. 1000 to Rs. 1999</a>
-		   		</li>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Rs. 2000 to Rs. 2999" class="tab" alt="Rs. 2000 to Rs. 2999">Rs. 2000 to Rs. 2999</a>
-		   		</li>
-		   		<li class="col-xs-4">
-		   			<a href="#" title="Above Rs. 3000" class="tab" alt="Above Rs. 3000">Above Rs. 3000</a>
-		   		</li>
-        	</ul>
-        </div> 
+	<div class="container">
+		<h2 class="section-title"> Price Store</h2>
+		    <div class="kss-price"> 
+		   		<ul>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Below Rs. 399" class="tab" alt="Below Rs. 299">Below Rs. 299</a>
+			   		</li>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Rs. 300 to Rs. 699" class="tab" alt="Below Rs. 399">Rs. 300 to Rs. 699</a>
+			   		</li>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Rs. 700 to Rs. 999" class="tab" alt="Rs. 700 to Rs. 999">Rs. 700 to Rs. 999</a>
+			   		</li>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Rs. 1000 to Rs. 1999" class="tab" alt="Rs. 1000 to Rs. 1999">Rs. 1000 to Rs. 1999</a>
+			   		</li>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Rs. 2000 to Rs. 2999" class="tab" alt="Rs. 2000 to Rs. 2999">Rs. 2000 to Rs. 2999</a>
+			   		</li>
+			   		<li class="col-xs-4">
+			   			<a href="#" title="Above Rs. 3000" class="tab" alt="Above Rs. 3000">Above Rs. 3000</a>
+			   		</li>
+	        	</ul>
+	        </div> 
+	</div>
 </div>
 
 
@@ -79,7 +81,7 @@
 						<div class="white-card d-inline-block">			
     						<div class="label-box__textarea">
     							<p class="label-box__title text-center">2 -7 <br> Years</p>
-    							<button class="btn kss-btn"> Shop Now</button>
+    							<span class="action__block">Shop Now</span>
     						</div> 
     					</div>
          			</a>
@@ -91,7 +93,7 @@
     					<div class="white-card d-inline-block">
     						<div class="label-box__textarea">
 	    						<p class="label-box__title text-center">7 - 14 <br> Years</p>
-	    						<button class="btn kss-btn"> Shop Now</button>	
+	    						<span class="action__block">Shop Now</span>	
 	    					</div>	 
 	    				</div>   				
          			</a>
@@ -124,8 +126,8 @@
 <div class="feaured_products">
 	<div class="container">
 		<h2 class="section-title">Featured Products</h2>
-			<div class="overflow-m row">
-				<div class="col-lg-3 col-md-6 col-6">
+			<div class="overflow-md row">
+				<div class="col-lg-3 col-md-3 col-6">
 				    <a href="#">
 						<figure class="figure product-card">
 						    <img src="../../../assets/img/landing-page-boys/featured-item1.jpg" class="img-fluid card-img-top" title="Ombre Print full-sleeves shirt" alt="Ombre Print full-sleeves shirt">
@@ -133,7 +135,7 @@
 						</figure>
 				    </a>
 			    </div>
-			    <div class="col-lg-3 col-md-6 col-6">
+			    <div class="col-lg-3 col-md-3 col-6">
 				    <a href="#">
 						<figure class="figure product-card">
 							<img src="../../../assets/img/landing-page-boys/featured-item2.jpg" class="img-fluid card-img-top" title="Half sleeve Stripper Henley T-Shirt" alt="Half sleeve Stripper Henley T-Shirt">
@@ -141,7 +143,7 @@
 						</figure>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-6 col-6">
+				<div class="col-lg-3 col-md-3 col-6">
 					<a href="#">
 						<figure class="figure product-card">
 						    <img src="../../../assets/img/landing-page-boys/featured-item3.jpg" class="img-fluid card-img-top" title="Boy's Music On World Print T-Shirt-Blue Aster" alt="Boy's Music On World Print T-Shirt-Blue Aster">
@@ -149,7 +151,7 @@
 						</figure>
 					</a>
 				</div>
-				<div class="col-lg-3 col-md-6 col-6">
+				<div class="col-lg-3 col-md-3 col-6">
 					<a href="#">
 						<figure class="figure product-card">
 							<img src="../../../assets/img/landing-page-boys/featured-item4.jpg" class="img-fluid card-img-top" title="Boy's Spaceship All Over Print T-Shirt-Golden Orange" alt="Boy's Spaceship All Over Print T-Shirt-Golden Orange">
@@ -165,28 +167,28 @@
 <div class="brands">
 	<div class="container">
 		<h2 class="section-title">Brands</h2>
-			<div class="d-flex flex-lg-nowrap flex-md-wrap flex-wrap">
-			  	<a href="#" class="white-hover mb-2">
+			<div class="d-flex flex-lg-nowrap flex-md-nowrap flex-wrap">
+			  	<a href="#" class="white-hover mr-md-2">
 				    <figure class="figure">
 						<img src="../../../assets/img/landing-page-boys/brand-default-288.png" class="loaded img-fluid" title="Upturn" alt="Upturn">
 				    </figure>
 			    </a>
-			    <a href="#" class="white-hover mb-2">
+			    <a href="#" class="white-hover mr-md-2">
 				    <figure class="figure">
 					    <img src="../../../assets/img/landing-page-boys/brand-default-290.png" class="loaded img-fluid" title="RoboFry" alt="RoboFry">
 				    </figure>
 				</a>
-			    <a href="#" class="white-hover mb-2">
+			    <a href="#" class="white-hover mr-md-2">
 				    <figure class="figure">
 					    <img src="../../../assets/img/landing-page-boys/brand-default-291.png" class="loaded img-fluid" title="Dream Theater" alt="Dream Theater">
 				    </figure>
 				</a>
-				<a href="#" class="white-hover mb-2">
+				<a href="#" class="white-hover mr-md-2">
 				    <figure class="figure">
 					  	<img src="../../../assets/img/landing-page-boys/brand-default-289.png" class="loaded img-fluid" title="321 Sportswear" alt="321 Sportswear">
 				    </figure>		   
 				</a>
-			    <a href="#" class="white-hover mb-2">
+			    <a href="#" class="white-hover mr-md-2">
 				    <figure class="figure">
 					  	<img src="../../../assets/img/landing-page-boys/brand-default-292.png" class="loaded img-fluid" title="Rikidoos" alt="Rikidoos">
 				    </figure>
@@ -198,60 +200,61 @@
 <!-- Shop by Clothing -->
 <div class="shop_by_clothing">
     <div class="container">
-	    <div class="row">
-	     	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-	     		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-			  		<img src="../../../assets/img/landing-page-boys/clothing_item1.jpeg" class="img-fluid">
-			  		<button class="btn btn-default">T-Shirts</button> 
-		  	    </a>
-	  		</div>
-	  		<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-	  			<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item2.jpeg" class="img-fluid">
-					<button class="btn btn-default">Boy Shirt</button> 
-			    </a>
-			</div>
-		    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-		    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
-					<button class="btn btn-default">Bottoms</button> 
-				</a>
-		    </div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item4.jpeg" class="img-fluid">
-					<button class="btn btn-default">Shoes</button> 
-				</a>
-			</div>
+    	<h2 class="section-title">Shop By Clothing</h2>
+		    <div class="row">
+		     	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+		     		<div class="category-item d-lg-block d-sm-inline-block position-relative">
+				  		<img src="../../../assets/img/landing-page-boys/clothing_item1.jpeg" class="img-fluid">
+				  		<a href="#" class="btn btn-default">T-Shirts</a> 
+			  	    </div>
+		  		</div>
+		  		<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+		  			<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item2.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Boy Shirt</a> 
+				    </div>
+				</div>
+			    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+			    	<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Bottoms</a> 
+					</div>
+			    </div>
+			 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+			 		<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item4.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Shoes</a> 
+					</div>
+				</div>
 
-	        <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-	        	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-			  		<img src="../../../assets/img/landing-page-boys/clothing_item5.jpeg" class="img-fluid">
-			  		<button class="btn btn-default">Formal Pants</button> 
-			  	</a>
-	  	    </div>
-	  	    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-	  	    	<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item6.jpeg" class="img-fluid">
-					<button class="btn btn-default">Jeans</button>
-				</a> 
+		        <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+		        	<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+				  		<img src="../../../assets/img/landing-page-boys/clothing_item5.jpeg" class="img-fluid">
+				  		<a href="#" class="btn btn-default">Formal Pants</a> 
+				  	</div>
+		  	    </div>
+		  	    <div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+		  	    	<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item6.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Jeans</a>
+					</div> 
+				</div>
+			 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+			 		<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Bottoms</a>
+					</div>
+				</div>
+			 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
+			 		<div class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
+						<img src="../../../assets/img/landing-page-boys/clothing_item8.jpeg" class="img-fluid">
+						<a href="#" class="btn btn-default">Jackets & Coats</a>
+					</div>
+				</div>
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item3.jpeg" class="img-fluid">
-					<button class="btn btn-default">Bottoms</button> 
-				</a>
+			<div class="action__block">
+				<button class="btn kss-btn w-auto"><a href="#">View All</a></button>
 			</div>
-		 	<div class="col-lg-3 col-md-6 col-6 text-center d-flex">
-		 		<a class="category-item d-lg-block d-sm-inline-block position-relative" href="#">
-					<img src="../../../assets/img/landing-page-boys/clothing_item8.jpeg" class="img-fluid">
-					<button class="btn btn-default">Jackets & Coats</button>
-				</a>
-			</div>
-		</div>
-		<div class="cd-discover">
-			<button class="btn kss-btn"><a href="#">View All</a></button>
-		</div>
     </div> 
 </div>
 
@@ -262,8 +265,8 @@
 	 		<div class="label-box__textarea">
 		 		<h4 class="label-box__title"> New Arrivals</h4>
 		 		<p class="label-box__subtitle"> Shop the latest new arrivals for boys with new styles added every week and from range of luxury designers.</p>
-		 		<div class="cd-discover">
-			 		<a href="#" class="btn kss-btn mb-1">
+		 		<div class="action__block">
+			 		<a href="#" class="btn kss-btn w-auto mb-1">
 			 			Discover
 			 		</a>
 			 	</div>
