--- a/modified pages/landing-boys.component.scss
+++ b/modified pages/landing-boys.component.scss
@@ -7,12 +7,11 @@
 //Section title name
 
 .section-title{
-		text-align:center;
-		margin-top:4rem;
-		margin-bottom:4rem;
-		text-transform:uppercase;
-		text-deocration:underline;
-		font-size: 2rem;
+	text-align:center;
+	margin-top:4rem;
+	margin-bottom:4rem;
+	text-transform:uppercase;
+	font-size: 2rem;
 }
 
 //shop by category section
@@ -32,14 +31,14 @@
 			    font-size: 1.5vw;
 			    font-weight: 500;
 			    letter-spacing: 0.1em;
-			    margin-bottom:0rem;
+			    margin-bottom:0;
 			    @media (max-width:768px){
 					font-size: 2.5vw
 				}
 			}
 			.cat__name{
 				font-size:3vw;
-			    font-weight: 600;
+			    font-weight: $font-weight-bold;
 			    text-transform: uppercase;
 			    @media (max-width:768px){
 					font-size: 6vw
@@ -61,7 +60,7 @@
 			width:50%;
 		}
 		&:hover{
-			color:#bb9a37;
+			color: theme-color("primary");
 		}
 	}
 	&:after{
@@ -71,37 +70,6 @@
 	}
 }
 
-//Shop by age
-
-.shop_by_age{
-	.age-block{
-		.white-card{
-			background: white;
-			box-shadow: 2px 3px 13px -2px #cacaca;
-			width: 45%;
-    		height: auto;
-    		margin: 0px;
-    		vertical-align: middle;
-			.label-box__textarea{
-	    		color: black;
-	    		text-align: center;
-	    		margin: 0 12% 35% 12%;
-	    		position: relative;
-    			top: 25px;
-	    		.label-box__title{
-		            font-size: 2.1vw;
-					font-weight: 600;
-					text-transform: uppercase;
-					color: $black;
-					border-bottom: 2px solid black;
-			    }
-			    @media(max-width:768px){
-			    	margin:20% 12% 43% 12%;
-			    }
-	    	}
-	    }
-    }   
-}
 
 
 //Shop by price Section
@@ -109,40 +77,41 @@
 .shop_by_price{
     overflow-x: hidden;
     background-color: #e8e8e8;
-    padding-bottom:8px;
+    padding-bottom:4rem;
 	.kss-price{
 		display: block;
 		overflow-x: auto;
         white-space: nowrap;
 	    position: relative;
-	    background-color: #f9f9f9;
-	    color: grey;
         ul{
         	padding-left: 0;
     		text-align: center;
+    		margin-bottom: 0;
             li{
-        	    height: 92px;
+        	    height: 65px;
     			display: inline-block;
     			transition: all .3s ease-out;
     			width: 15.75%;
+    			border: 1px solid #00000024;
+    			background: #f9f9f9;
+    			padding: 0;
+    			margin: 0 4px;
+    			border-radius:6px;
     			a{
     	            display: inline-block;
 	  				float: none;
-				    line-height: 90px;
-				    font-size: 15px;
+				    line-height: 60px;
+				    font-size: 16px;
 				    white-space: nowrap;
 				    overflow: visible;
-				    color: #999;
+				    color: #000;
 				    transition: all 0.3s ease-out;
 				    text-align:center;
-				    margin: 0 1rem;
+				    margin: 0 0.6rem;
 				    &:hover{
 				    	color: $d-red;
     					text-decoration: none;
     					cursor: pointer;
-				    }
-				    tab{
-					    color:$d-red;
 				    }
 				    &:hover::after {
     					width: 100%;
@@ -153,13 +122,26 @@
 						width: 0;
 						margin: 0 auto;
 						height: 3px;
-						background: #e40046;
+						background: $d-red;
 						transition: width .3s;
 				    }
+				    @media (max-width: 475px){
+				    	font-size: 13px;
+				    }
 				}
-			    @media (max-width: 992px) and (min-width: 150px) {
+			    @media (max-width: 992px) and (min-width: 576px) {
 		    		padding: 0;
-		    		display: inline;
+		    		display: inline-table;
+                }
+                @media (max-width: 575px){
+		    		display: inline-block;
+		    		float:left;
+		    		width:47%;
+		    		margin:4px 4px;
+                }
+                @media (max-width: 318px){
+	                display: block;
+	    			width: 98%;
                 }
         	}
        	}
@@ -170,29 +152,70 @@
 }
 
 
+//Shop by age
+
+.shop_by_age{
+	.age-block{
+		.white-card{
+			background: white;
+			box-shadow: 2px 3px 13px -2px #cacaca;
+			width: 45%;
+    		height: auto;
+    		margin: 0;
+    		vertical-align: middle;
+			.label-box__textarea{
+			    color: #000;
+			    text-align: center;
+			    margin: 6% 12% 32% 12%;
+			    position: relative;
+			    top: 25px;
+	    		.label-box__title{
+					font-weight: $font-weight-bold;
+					text-transform: uppercase;
+					color: $black;
+					border-bottom: 2px solid black;
+					font-size: 30px;
+					@media(max-width:425px){
+						font-size:20px;
+					}
+				}
+				.action__block{
+				    border-radius: 0;
+				    padding: 0.4rem 0.9rem;
+				    color: #ffffff;
+				    text-transform: uppercase;
+				    font-weight: bold;
+				    background: #dc3545;
+				    font-size: 15px;
+				    @media(max-width:425px){
+						font-size: 10px;
+					}
+				}
+				@media (max-width:575px){
+			    	margin:0% 12% 30% 12%;
+			    }
+			}
+	    }
+	}
+}   
+
+
 // Featured products section
 
 .feaured_products{
-	.overflow-m{
-		overflow-x: scroll;
+	.overflow-md{
+		overflow-x: auto;
   		overflow-y: hidden;
  		white-space: nowrap;
  		display: flex;
   		flex-wrap: nowrap;
-  		overflow-x: auto;
-  		.col-6{
-			.product-card{
-				display: inline-block;
-				flex: 0 0 auto;
-				margin-right: 6px;
+		.product-card{
+			display: inline-block;
+			flex: 0 0 auto;
+			&:hover{
+			    box-shadow: 0 0 5px rgba(6,6,6,.16);
 			}
-		@media (max-width: 992px) and (min-width: 320px) {
-   		    max-width: 100%;
-    		padding: 0;
-    		display: flex;
-            flex: 1 0 40%;
-            }
-	    }
+		}
 		@media (max-width: 992px) and (min-width: 320px){
 			&::-webkit-scrollbar {
 	    	    display: none;
@@ -219,33 +242,33 @@
 	}
 }
 
-
 // Brands section
 
 .brands{
 	.white-hover{
 		background-color: #afafaf3b;
     	height: 100%;
-    	margin: 0 10px;
+    	margin: 0 5px;
+    	filter: grayscale(100%);
+		opacity:0.7;
+		transition: 0.8s;
 		.figure{
 		    text-align: center;
     		margin: auto;
-    		padding: 15px;
-    		display: block;
-			.loaded{
-				filter: grayscale(100%);
-				opacity:0.7;
-				width:80%;
-				&:hover{
-				    filter:none;
-				    opacity:1;
-				}	    
-			}
+    		padding: 25px 25px;
+    		display: block; 
+		}
+		&:hover{
+			filter:none;
+			opacity:1;
+			transition: 0.8s;
 		}
 		@media (max-width:991px){
-			margin:auto;
-			width:49%;
-		}
+			margin: 0 auto 3%;
+			width:47%;
+			opacity:1; 
+	        filter:none;
+		} 
     }
 }
 
@@ -253,23 +276,24 @@
 //Shop by clothing section
 
 .shop_by_clothing{
-	margin: 4rem 0rem;
+	margin: 4rem 0;
 	.category-item{
 		margin-bottom: 27px;
 	    .btn-default{
-			background-color: transparent;
+			background-color: #00000075;
 			border: 1px solid #f8f9fa;
 			padding: 0.5rem;
-			font-size: 14px;
+			font-size: 16px;
 			color:$white;
 			position: absolute;
 			left: 50%;
 			bottom:0.5rem;
 			transform: translateX(-50%);
 			&:hover{
-			    background-color: transparent;
+			    background-color: #ffffffd1;
 			    border: 1px solid $white;
-			    color:$white;
+			    color:$black;
+			    transition: 0.5s ease-in-out;
 			}
 		}
 		&:before{
@@ -283,9 +307,8 @@
 			height: 100%;
 		}
 	}
-	.cd-discover{
-		margin: auto;
-     	max-width: 30%;
+	.action__block{
+		text-align:center;
 		a{
 			text-decoration:none;
 			color:$black;
@@ -299,39 +322,65 @@
 
 .new_arrivals{
 	overflow: hidden;
-	display:inline-block;
 	.label-box__textarea{
+		text-align:center;
 		position: absolute;
-	    left: 0;
-	    right: 0;
-	    bottom: 21%;
-	    text-align:center;
+		left:0;
+		right:0;
+		bottom:25%;
 		.label-box__title{
 			font-size: 5vw;
 			color: $black;
-	    	font-weight: 600;
+	    	font-weight: $font-weight-bold;
 	    	text-transform:uppercase;
 	    	text-shadow: 1px 2px 1px;
+	    	@media (max-width:767px){
+	    		color:#fff;
+	    	}
 	    	@media (max-width:575px){
-	    		font-size:9vw;
+	    		font-size:8vw;
 	    	}
 	    }
 		.label-box__subtitle{
-		    font-size: 16px;
-		    line-height: 1.3;
-		    font-weight: 600;
+		    font-size: 15px;
+		    line-height: 1.2;
+		    font-weight: $font-weight-bold;
 		    letter-spacing: 0.04em;
-		    margin: 1.1em 2.3em
+		    margin: 1.1em 2.3em;
+		    @media (max-width:575px){
+	    		font-size:3.5vw;
+	    	}
 	    }
-	    .cd-discover{
+	    .action__block{
 			display: block;
-	        margin:auto;
+	        margin: auto;
 			border-radius: 0px;
-			max-width:30%;
 	    }
-	    @media (max-width:768px){
-	    	position: initial;
-   			margin: 2px;
+	    @media (max-width:767px){
+		    position: absolute;
+		    left: 0;
+		    right: 0;
+		    top: 0;
+		    z-index: 1;
+		    margin-top: 15%;
+		    color:$white;
+	    }
+	    @media (max-width: 575px){
+	    	margin-top: 5%;
+	    }
+	}
+	@media (max-width:767px){
+		&:before{
+			content: '';
+		    display: block;
+		    background-color: rgba(0, 0, 0, 0.62);
+		    width: 100%;
+		    height: 100%;
+		    position: absolute;
+		    left: 0;
+		    right: 0;
+		    bottom: 0;
+		    z-index: 1;
 	    }
 	}
 }
