--- a/modified pages/landing-boys.component.html
+++ b/modified pages/landing-boys.component.html
@@ -38,6 +38,7 @@
 </div>
 
 
+
 <!-- Shop by price -->
 <div class="shop_by_price">
 	<div class="container">
@@ -67,6 +68,26 @@
 	</div>
 </div>
 
+
+<!-- New Arrivals -->
+<div class="new_arrivals position-relative">
+ 	<div class="row">
+	 	<div class="col-lg-6 col-md-6 col-sm-12">
+	 		<div class="label-box__textarea">
+		 		<h4 class="label-box__title"> New Arrivals</h4>
+		 		<p class="label-box__subtitle"> Shop the latest new arrivals for boys with new styles added every week and from range of luxury designers.</p>
+		 		<div class="action__block text-center">
+			 		<button class="btn-discover w-auto"><a href="#">Discover</a></button>
+			 	</div>
+		 	</div>
+	 	</div>
+	 	<div class="col-lg-6 col-md-6 col-sm-12 ">
+	 		<a href="#">
+	 			<img src="../../../assets/img/landing-page-boys/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
+	 		</a>
+	 	</div>
+ 	</div>
+</div>
 
 
 <!-- Shop by age -->
@@ -252,33 +273,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="action__block">
+			<div class="action__block text-center">
 				<button class="btn kss-btn w-auto"><a href="#">View All</a></button>
 			</div>
     </div> 
 </div>
 
-<!-- New Arrivals -->
-<div class="new_arrivals position-relative">
- 	<div class="row">
-	 	<div class="col-lg-6 col-md-6 col-sm-12">
-	 		<div class="label-box__textarea">
-		 		<h4 class="label-box__title"> New Arrivals</h4>
-		 		<p class="label-box__subtitle"> Shop the latest new arrivals for boys with new styles added every week and from range of luxury designers.</p>
-		 		<div class="action__block">
-			 		<a href="#" class="btn kss-btn w-auto mb-1">
-			 			Discover
-			 		</a>
-			 	</div>
-		 	</div>
-	 	</div>
-	 	<div class="col-lg-6 col-md-6 col-sm-12 ">
-	 		<a href="#">
-	 			<img src="../../../assets/img/landing-page-boys/new_arrivals.jpg" class="img-fluid" alt="new arrivals" title="New Arrivals">
-	 		</a>
-	 	</div>
- 	</div>
-</div>
 
 </ng-container>
 
