--- a/modified pages/landing-boys.component.scss
+++ b/modified pages/landing-boys.component.scss
@@ -76,7 +76,7 @@
 
 .shop_by_price{
     overflow-x: hidden;
-    background-color: #e8e8e8;
+    background-color: theme-color("light");
     padding-bottom:4rem;
 	.kss-price{
 		display: block;
@@ -101,7 +101,7 @@
     	            display: inline-block;
 	  				float: none;
 				    line-height: 60px;
-				    font-size: 16px;
+				    font-size: 15px;
 				    white-space: nowrap;
 				    overflow: visible;
 				    color: $black;
@@ -152,25 +152,85 @@
 }
 
 
+
+
+//New arrivals section
+
+.new_arrivals{
+	overflow: hidden;
+	.label-box__textarea{
+		text-align:center;
+		display:flex;
+		flex-direction:column;
+		margin-top: 15%;
+		.label-box__title{
+			font-size: 5vw;
+			color: $black;
+	    	font-weight: $font-weight-bold;
+	    	text-transform:uppercase;
+	    	@media (max-width: 767px){
+		    	color: $white;
+	        }
+	    	@media (max-width:575px){
+	    		font-size:8vw;
+	    	}
+	    }
+		.label-box__subtitle{
+		    font-size: 17px;
+		    line-height: 1.2;
+		    margin: 1.1em 1.3em;
+		    @media (max-width:575px){
+	    		font-size:3.5vw;
+	    	}
+	    }
+	    .btn-discover{
+		    background: #dc3545;
+		    border: none;
+		    padding: 6px 30px;
+		    padding: 0.4rem 2rem;
+		    box-shadow: inset 0 0 0 0 $black;
+			-webkit-transition: ease-out 0.8s;
+			transition: ease-out 0.8s;
+		    a{
+		    	color:$white;
+		    	font-size: 15px;
+		    	text-transform: uppercase;
+		    	font-weight: bold;
+		    }
+		    @media(max-width:425px){
+				font-size: 10px;
+			}
+			&:hover{
+				box-shadow: inset 400px 0 0 0 $black;
+			}
+	    }
+	    @media (max-width: 767px){
+	    	position:absolute;
+	    	z-index: 1;
+	    	color: $white;
+	    }
+	}
+	@media (max-width:767px){
+		&:before{
+			content: '';
+		    display: block;
+		    background-color: rgba(0, 0, 0, 0.62);
+		    width: 100%;
+		    height: 100%;
+		    position: absolute;
+		    left: 0;
+		    right: 0;
+		    bottom: 0;
+		    z-index: 1;
+	    }
+	}
+}
+
+
 //Shop by age
 
 .shop_by_age{
 	.age-block{
-		.img-effects{
-			&:hover{
-				-webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
-				-webkit-mask-size: 200%;
-  				animation: shine 2s infinite;
-			}
-			@-webkit-keyframes shine {
-				from {
-					-webkit-mask-position: 150%;
-				}			  
-				to {
-				   -webkit-mask-position: -50%;
-				}
-			}
-		}
 		.white-card{
 			background: white;
 			box-shadow: 2px 3px 13px -2px $gray-400;
@@ -178,6 +238,7 @@
     		height: auto;
     		margin: 0;
     		vertical-align: middle;
+    		transition: transform .5s;
 			.label-box__textarea{
 			    color: $black;
 			    text-align: center;
@@ -188,7 +249,7 @@
 					font-weight: $font-weight-bold;
 					text-transform: uppercase;
 					color: $black;
-					border-bottom: 2px solid black;
+					border-bottom: 2px solid $black;
 					font-size: 30px;
 					@media(max-width:425px){
 						font-size:20px;
@@ -215,6 +276,10 @@
 				@media (max-width:575px){
 			    	margin:0% 12% 30% 12%;
 			    }
+			}
+			&:hover{
+			  border-bottom-right-radius: 100% 20px;
+			  box-shadow: 2px 3px 23px -2px $gray-400;
 			}
 	    }
 	}
@@ -282,7 +347,6 @@
 		&:hover{
 			filter:none;
 			opacity:1;
-			transition: 0.8s;
 		}
 		@media (max-width:991px){
 			margin: 0 auto 3%;
@@ -328,72 +392,9 @@
 			height: 100%;
 		}
 	}
-	.action__block{
-		text-align:center;
-		a{
-			text-decoration:none;
-			color:$black;
-		}
+	a{
+		text-decoration:none;
+		color:$black;
 	}
 }
 
-
-
-//New arrivals section
-
-.new_arrivals{
-	overflow: hidden;
-	.label-box__textarea{
-		text-align:center;
-		display:flex;
-		flex-direction:column;
-		margin-top: 15%;
-		.label-box__title{
-			font-size: 5vw;
-			color: $black;
-	    	font-weight: $font-weight-bold;
-	    	text-transform:uppercase;
-	    	text-shadow: 1px 2px 1px;
-	    	@media (max-width: 768px){
-		    	color: $white;
-	        }
-	    	@media (max-width:575px){
-	    		font-size:8vw;
-	    	}
-	    }
-		.label-box__subtitle{
-		    font-size: 15px;
-		    line-height: 1.2;
-		    font-weight: $font-weight-bold;
-		    letter-spacing: 0.04em;
-		    margin: 1.1em 2.3em;
-		    @media (max-width:575px){
-	    		font-size:3.5vw;
-	    	}
-	    }
-	    .action__block{
-			display: block;
-	        margin: auto;
-			border-radius: 0px;
-	    }
-	    @media (max-width: 768px){
-	    	position:absolute;
-	    	z-index: 1;
-	    	color: $white;
-	    }
-	}
-	@media (max-width:767px){
-		&:before{
-			content: '';
-		    display: block;
-		    background-color: rgba(0, 0, 0, 0.62);
-		    width: 100%;
-		    height: 100%;
-		    position: absolute;
-		    left: 0;
-		    right: 0;
-		    bottom: 0;
-		    z-index: 1;
-	    }
-	}
-}
